Fix bug with topnav not fixed at top on mobile

--- a/index.css
+++ b/index.css
@@ -292,7 +292,7 @@
     }
 
     .topnav.responsive {
-        position: relative;
+        position: fixed;
     }
 
     .topnav.responsive a {
@@ -302,7 +302,7 @@
     }
 
     .topnav.responsive a.icon {
-        position: absolute;
+        position: fixed;
         right: 0;
         top: 0;
     }
